--- a/src/pages/home/home.fxml
+++ b/src/pages/home/home.fxml
@@ -75,7 +75,7 @@
         </Button>
         <Button fx:id="pomodoroButton" layoutX="137.0" layoutY="30.0" mnemonicParsing="false" styleClass="icon-btn" onAction="#goToPomodoro">
             <graphic>
-                <FontIcon iconLiteral="fas-stopwatch" iconSize="20" styleClass="iconli-font-icon"/>
+                <FontIcon iconLiteral="fas-hourglass-half" iconSize="20" styleClass="iconli-font-icon"/>
             </graphic>
         </Button>
         <Button onAction="#goToPlaylists" layoutX="200.0" layoutY="30.0" text="Playlist" styleClass="icon-btn">
