Implement Responsive UI

--- a/src/pages/home/home.fxml
+++ b/src/pages/home/home.fxml
@@ -15,12 +15,17 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pages.home.HomeController">
     <children>
-        <Text fill="WHITE" layoutX="449.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
-            <font>
-                <Font name="Monospaced Regular" size="25.0" />
-            </font>
-        </Text>
-        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="35.0" layoutY="159.0" prefHeight="300.0" prefWidth="906.0">
+        <HBox alignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
+                <font>
+                    <Font name="Monospaced Regular" size="25.0" />
+                </font>
+            </Text>
+        </HBox>
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="300.0"
+                    AnchorPane.leftAnchor="35.0"
+                    AnchorPane.rightAnchor="35.0"
+                    AnchorPane.topAnchor="159.0">
             <content>
                 <VBox fx:id="vbox" prefHeight="0.0" prefWidth="892.0">
                     <padding>
@@ -29,9 +34,13 @@
                 </VBox>
             </content>
         </ScrollPane>
-        <HBox fx:id="topBar" blendMode="SCREEN" layoutX="35.0" layoutY="109.0" prefHeight="43.0" prefWidth="906.0" style="-fx-border-color: white; -fx-border-width: 2px;">
+        <HBox fx:id="topBar" blendMode="SCREEN" prefHeight="43.0" style="-fx-border-color: white; -fx-border-width: 2px;"
+              AnchorPane.leftAnchor="35.0"
+              AnchorPane.rightAnchor="35.0"
+              AnchorPane.topAnchor="109.0"
+        >
             <children>
-                <GridPane prefHeight="30.0" prefWidth="920.0">
+                <GridPane prefHeight="30.0" HBox.hgrow="ALWAYS">
                     <columnConstraints>
                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -63,22 +72,22 @@
                 </GridPane>
             </children>
         </HBox>
-        <Button layoutX="840.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="icon-btn">
+        <Button AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="30.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="icon-btn">
             <graphic>
                 <FontIcon iconLiteral="fas-cog" iconSize="20" styleClass="iconli-font-icon"/>
             </graphic>
         </Button>
-        <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" styleClass="icon-btn">
+        <Button AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="30.0" mnemonicParsing="false" onAction="#AddNewMusic" styleClass="icon-btn">
             <graphic>
                 <FontIcon iconLiteral="fas-plus" iconSize="20" styleClass="iconli-font-icon"/>
             </graphic>
         </Button>
-        <Button fx:id="pomodoroButton" layoutX="137.0" layoutY="30.0" mnemonicParsing="false" styleClass="icon-btn" onAction="#goToPomodoro">
+        <Button fx:id="pomodoroButton" AnchorPane.leftAnchor="137.0" AnchorPane.topAnchor="30.0" mnemonicParsing="false" styleClass="icon-btn" onAction="#goToPomodoro">
             <graphic>
                 <FontIcon iconLiteral="fas-stopwatch" iconSize="20" styleClass="iconli-font-icon"/>
             </graphic>
         </Button>
-        <Button onAction="#goToPlaylists" layoutX="200.0" layoutY="30.0" text="Playlist" styleClass="icon-btn">
+        <Button onAction="#goToPlaylists" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="30.0" text="Playlist" styleClass="icon-btn">
             <graphic>
                 <FontIcon iconLiteral="fas-list" iconSize="20" styleClass="iconli-font-icon"/>
             </graphic>
