--- a/src/pages/pomodoro/Pomodoro.fxml
+++ b/src/pages/pomodoro/Pomodoro.fxml
@@ -26,12 +26,21 @@
         </Text>
     </HBox>
 
-    <Button layoutX="880.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToHome" text="X" styleClass="close-btn"/>
 
-    <HBox alignment="CENTER" layoutX="27.0" layoutY="88.0" prefHeight="400.0" prefWidth="906.0" spacing="100.0" style="-fx-background-color: transparent;">
+
+    <HBox alignment="CENTER"
+          fillHeight="false"
+          AnchorPane.bottomAnchor="0.0"
+          AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0"
+          AnchorPane.topAnchor="0.0"
+          spacing="100.0"
+          style="-fx-background-color: transparent;">
+
         <padding>
             <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
         </padding>
+
         <VBox alignment="TOP_CENTER" prefWidth="400" spacing="20.0" HBox.hgrow="ALWAYS">
             <HBox alignment="CENTER" spacing="40.0">
                 <VBox alignment="CENTER" spacing="50.0">
@@ -89,9 +98,9 @@
                                 <Insets bottom="200.0" />
                             </StackPane.margin>
                             <Button fx:id="increaseHourButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
-                            <graphic>
-                                <FontIcon iconLiteral="fas-plus" iconSize="22" styleClass="iconli-font-icon"/>
-                            </graphic>
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-plus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
                             </Button>
                             <Button fx:id="increaseMinuteButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
                                 <graphic>
@@ -108,7 +117,7 @@
                 </VBox>
             </HBox>
         </VBox>
-        <!--Stats Column -->
+
         <VBox alignment="TOP_LEFT" prefWidth="400" spacing="10" HBox.hgrow="ALWAYS">
             <padding>
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
@@ -116,4 +125,6 @@
             <Label fx:id="statsLabel" alignment="CENTER_LEFT" style="-fx-font-family: monospace; -fx-font-size: 14pt; -fx-text-fill: #E0E0E0;" text="Loading statistics..." />
         </VBox>
     </HBox>
+
+    <Button AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="30.0" mnemonicParsing="false" onAction="#goToHome" text="X" styleClass="close-btn"/>
 </AnchorPane>
